# frostnip_pp

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/scripts/: Level1.lua
src/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  CollisionEngine.cpp  CollisionEngine.h  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Utils.h  main.cpp
src/Components/: ColliderComponent.cpp  ColliderComponent.h  KeyboardControlComponent.cpp  KeyboardControlComponent.h  ProjectileEmitterComponent.cpp  ProjectileEmitterComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextLabelComponent.cpp  TextLabelComponent.h  TileComponent.cpp  TileComponent.h  TransformComponent.cpp  TransformComponent.h
src/Utils/: Benchmark.cpp  Benchmark.h  Math.h  Utils.cpp  Utils.h  Vec2.cpp  Vec2.h
